// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CreateForm > should render 1`] = `
<div>
  <form
    class="_container_eddc76"
  >
    <h3
      class="_heading_eddc76"
    >
      Create a Claim Type
    </h3>
    <p>
      To create a Claim Type you need a
       
      <a
        class="_anchor_eddc76"
        href="https://kilt-protocol.org/get-did/index.html"
      >
        KILT DID
      </a>
       
      and the
       
      <a
        class="_anchor_eddc76"
        href="https://www.sporran.org/"
      >
        Sporran wallet
      </a>
       
      (or another wallet supporting the
       
      <a
        class="_anchor_eddc76"
        href="https://github.com/KILTprotocol/spec-ext-didsign-api"
      >
        DID Sign API Specification v1.1+
      </a>
      )
    </p>
    <p>
      <label
        class="_label_eddc76"
      >
        Title:
        <input
          class="_input_eddc76"
          name="title"
          required=""
        />
      </label>
    </p>
    <p>
      <label
        class="_label_eddc76"
      >
        Description:
        <textarea
          class="_description_eddc76"
          name="description"
        />
      </label>
    </p>
    <fieldset
      class="_fieldset_eddc76"
    >
      <legend>
        Property 
        1
      </legend>
      <p>
        <button
          class="_add_eddc76"
          type="button"
        >
          Add Property ➕️
        </button>
      </p>
    </fieldset>
    <p
      class="_label_1b3ac1"
    >
      <button
        class="_load_1b3ac1"
        type="button"
      >
        Detect accounts
      </button>
      and
       
      <label>
        select payment KILT account:
        <select
          class="_select_1b3ac1"
          required=""
        />
      </label>
    </p>
    <button
      class="_submit_eddc76"
      type="submit"
    >
      Create Claim Type
    </button>
  </form>
</div>
`;

exports[`CreateForm > should render 2`] = `
<div>
  <form
    class="_container_eddc76"
  >
    <h3
      class="_heading_eddc76"
    >
      Create a Claim Type
    </h3>
    <p>
      To create a Claim Type you need a
       
      <a
        class="_anchor_eddc76"
        href="https://kilt-protocol.org/get-did/index.html"
      >
        KILT DID
      </a>
       
      and the
       
      <a
        class="_anchor_eddc76"
        href="https://www.sporran.org/"
      >
        Sporran wallet
      </a>
       
      (or another wallet supporting the
       
      <a
        class="_anchor_eddc76"
        href="https://github.com/KILTprotocol/spec-ext-didsign-api"
      >
        DID Sign API Specification v1.1+
      </a>
      )
    </p>
    <p>
      <label
        class="_label_eddc76"
      >
        Title:
        <input
          class="_input_eddc76"
          name="title"
          required=""
        />
      </label>
    </p>
    <p>
      <label
        class="_label_eddc76"
      >
        Description:
        <textarea
          class="_description_eddc76"
          name="description"
        />
      </label>
    </p>
    <fieldset
      class="_fieldset_eddc76"
    >
      <legend>
        Property 
        1
      </legend>
      <p>
        <label
          class="_label_8bc908"
        >
          Name:
          <input
            class="_input_8bc908"
            name="property[0].name"
            required=""
          />
        </label>
      </p>
      <p>
        <label
          class="_label_8bc908"
        >
          Type:
          <select
            class="_input_8bc908"
            name="property[0].type"
          >
            <option
              value="string"
            >
              string
            </option>
            <option
              value="integer"
            >
              integer
            </option>
            <option
              value="number"
            >
              number
            </option>
            <option
              value="boolean"
            >
              boolean
            </option>
            <option
              value="reference"
            >
              reference
            </option>
          </select>
        </label>
      </p>
      <div
        class="_group_8bc908"
      >
        <p>
          <label
            class="_label_8bc908"
          >
            Minimum length (optional):
            <input
              class="_input_8bc908"
              min="0"
              name="property[0].minLength"
              step="1"
              type="number"
            />
          </label>
        </p>
        <p>
          <label
            class="_label_8bc908"
          >
            Maximum length (optional):
            <input
              class="_input_8bc908"
              min="0"
              name="property[0].maxLength"
              step="1"
              type="number"
            />
          </label>
        </p>
      </div>
      <p>
        <label
          class="_label_8bc908"
        >
          Format (optional):
          <select
            class="_input_8bc908"
            name="property[0].format"
          >
            <option
              value=""
            >
              unset
            </option>
            <option
              value="date"
            >
              date
            </option>
            <option
              value="time"
            >
              time
            </option>
            <option
              value="uri"
            >
              URI
            </option>
          </select>
        </label>
      </p>
      <p>
        <label
          class="_label_8bc908"
        >
          Comma-separated list of allowed values, no spaces (optional):
          <input
            class="_input_8bc908"
            name="property[0].enum"
            pattern="[^,](,.+)*"
          />
        </label>
      </p>
      <p>
        <label
          class="_array_8bc908"
        >
          <input
            name="property[0].array"
            type="checkbox"
            value="array"
          />
          is an array of such values
        </label>
      </p>
    </fieldset>
    <fieldset
      class="_fieldset_eddc76"
    >
      <legend>
        Property 
        2
      </legend>
      <p>
        <button
          class="_add_eddc76"
          type="button"
        >
          Add Property ➕️
        </button>
      </p>
    </fieldset>
    <p
      class="_label_1b3ac1"
    >
      <button
        class="_load_1b3ac1"
        type="button"
      >
        Detect accounts
      </button>
      and
       
      <label>
        select payment KILT account:
        <select
          class="_select_1b3ac1"
          required=""
        />
      </label>
    </p>
    <button
      class="_submit_eddc76"
      type="submit"
    >
      Create Claim Type
    </button>
  </form>
</div>
`;
